--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 #header {
-    background-color: rgba(21, 28, 234, 0.71);
+    background-color: rgb(21, 81, 9);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,12 +22,21 @@ html, body {
     margin: 0;
 }
 
+#header h1:hover {
+    color: rgba(111, 113, 216, 0.817);
+}
+
 #header a {
-    color: greenyellow;
+    color: rgb(29, 186, 110);
     font-size: 24px;
     font-weight: 500;
     text-decoration: none;
     margin-left: 12px;
+}
+
+#header a:hover {
+    color: rgb(179, 0, 255);
+    border-bottom: 2px solid white;
 }
 
 section {
@@ -101,6 +110,11 @@ section {
     margin-left: 16px;
 }
 
+.tombol:hover {
+    color: #FFC108;
+    border: 2px solid white;
+}
+
 .tombol-kanan {
     margin-left: 16px;
 }
@@ -161,11 +175,11 @@ section {
   }
 
 footer {
-    background-color: black;
+    background-color: rgb(55, 29, 8);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 64px 128px;
+    padding: 32px 128px;
 }
 
 footer h1 {
@@ -181,9 +195,5 @@ footer div {
 }
 
 #kontak-admin p {
-    font-size: 20px;
-}
-
-#kontak-admin a {
     font-size: 20px;
 }
