--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ html, body {
     margin: 0;
 }
 
+@keyframes fadeInBiasa {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @keyframes fadeInKiri {
     from {
         opacity: 0;
@@ -26,6 +35,17 @@ html, body {
     to {
         opacity: 1;
         transform: translateX(0);
+    }
+}
+
+@keyframes fadeInAtas {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
@@ -55,7 +75,7 @@ html, body {
     font-weight: 500;
     text-decoration: none;
     margin-left: 12px;
-    animation: fadeInKanan 1.5s ease-out;
+    animation: fadeInBiasa 1.5s ease-out;
 }
 
 #header a:hover {
@@ -73,7 +93,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 300px 300px;
+    padding: 350px 300px;
 }
 
 #tentang-kami h1 {
@@ -82,6 +102,7 @@ section {
     margin-top: 24px;
     text-align: center;
     color: white;
+    animation: fadeInAtas 1.5s ease-out;
 }
 
 #tentang-kami p {
@@ -90,6 +111,7 @@ section {
     font-weight: 500;
     text-align: center;
     color: white;
+    animation: fadeInAtas 1.5s ease-out;
 }
 
 #laman-pilihan {
@@ -98,7 +120,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 300px 300px; 
+    padding: 400px 300px; 
     column-gap: 72px;
 }
 
@@ -173,7 +195,7 @@ section {
 #penutup {
     background-image: url("gambarByoo3.jpeg");
     background-size: cover;
-    padding: 200px 300px;
+    padding: 300px 200px;
     display: flex;
     justify-content: center;
     align-items: center;
