--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ html, body {
     align-items: center;
     justify-content: space-between;
     padding: 24px 128px;
+    position: sticky;
+    top: 0;
 }
 
 #header h1 {
@@ -247,7 +249,7 @@ footer div {
     font-size: 20px;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 1000px) {
     #header, #footer {
         padding: 16px 32px;
     }
